WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90345
[BlackBerry] Clear visited links when history is cleared
https://bugs.webkit.org/show_bug.cgi?id=90345
Summary
[BlackBerry] Clear visited links when history is cleared
George Staikos
Reported
2012-06-30 19:28:05 PDT
Clear visited links when clearing history.
Attachments
1-line patch
(1.07 KB, patch)
2012-06-30 19:29 PDT
,
George Staikos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
George Staikos
Comment 1
2012-06-30 19:29:23 PDT
Created
attachment 150326
[details]
1-line patch
WebKit Review Bot
Comment 2
2012-07-01 01:31:17 PDT
Comment on
attachment 150326
[details]
1-line patch Rejecting
attachment 150326
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: hanize/_urllib2_fork.py", line 332, in _call_chain result = func(*args) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1170, in https_open return self.do_open(conn_factory, req) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1118, in do_open raise URLError(err) urllib2.URLError: <urlopen error [Errno -3] Temporary failure in name resolution> Full output:
http://queues.webkit.org/results/13106923
WebKit Review Bot
Comment 3
2012-07-01 10:09:44 PDT
Comment on
attachment 150326
[details]
1-line patch Clearing flags on attachment: 150326 Committed
r121634
: <
http://trac.webkit.org/changeset/121634
>
WebKit Review Bot
Comment 4
2012-07-01 10:09:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug