Clear visited links when clearing history. https://bugs.webkit.org/show_bug.cgi?id=90345

Reviewed by Antonio Gomes.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPage::clearHistory):


git-svn-id: svn://svn.chromium.org/blink/trunk@121634 bbb929c8-8fbe-4397-9dbb-9b2b20218538