third_party/WebKit/Source/WebKit/blackberry/Api/WebPage.cpp
@@ -5359,6 +5359,7 @@ void WebPage::clearBrowsingData()
 void WebPage::clearHistory()
 {
     // Don't clear the back-forward list as we might like to keep it.
+    PageGroup::removeAllVisitedLinks();
 }
 
 void WebPage::clearCookies()
